@@ -2,6 +2,8 @@
 #Released under the MIT License <https://opensource.org/licenses/MIT>
 
 from pyjsdl.pyjsobj import Audio
+from pyjsdl import env
+from pyjsdl import locals as Const
 
 __docformat__ = 'restructuredtext'
 
@@ -357,6 +359,8 @@ class Channel(object):
     * Channel.get_volume
     * Channel.get_busy
     * Channel.get_sound
+    * Channel.set_endevent
+    * Channel.get_endevent
     """
 
     _mixer = None
@@ -371,6 +375,7 @@ class Channel(object):
         self._volume = 1.0
         self._lvolume = 1.0
         self._rvolume = 1.0
+        self._endevent = None
         self._mixer._register_channel(self)
         self._ended_handler = lambda event: self._onended(event)
         self._nonimplemented_methods()
@@ -427,6 +432,8 @@ class Channel(object):
             self._lvolume = 1.0
             self._rvolume = 1.0
             self._mixer._restore_channel(self._id)
+            if self._endevent is not None:
+                env.event.post(self._endevent)
         return None
 
     def pause(self):
@@ -480,12 +487,31 @@ class Channel(object):
         """
         return self._sound
 
+    def set_endevent(self, eventType=None):
+        """
+        Set endevent for sound channel.
+        Argument eventType is event type (eg. USEREVENT+num).
+        Without an argument resets endevent to NOEVENT type.
+        """
+        if eventType is not None:
+            if self._endevent is None or self._endevent.type != eventType:
+                self._endevent = env.event.Event(eventType)
+        else:
+            self._endevent = None
+
+    def get_endevent(self):
+        """
+        Get endevent type for sound channel.
+        """
+        if self._endevent is not None:
+            return self._endevent.type
+        else:
+            return Const.NOEVENT
+
     def _nonimplemented_methods(self):
         self.fadeout = lambda *arg: None
         self.queue = lambda *arg: None
         self.get_queue = lambda *arg: None
-        self.set_endevent = lambda *arg: None
-        self.get_endevent = lambda *arg: 0
 
 
 class Music(object):
@@ -501,6 +527,8 @@ class Music(object):
     * music.set_volume
     * music.get_volume
     * music.get_busy
+    * music.set_endevent
+    * music.get_endevent
     """
 
     def __init__(self):
@@ -578,4 +606,19 @@ class Music(object):
         Check if music playing.
         """
         return self._channel.get_busy()
+
+    def set_endevent(self, eventType=None):
+        """
+        Set endevent for music channel.
+        Argument eventType is event type (eg. USEREVENT+num).
+        Without an argument resets endevent to NOEVENT type.
+        """
+        self._channel.set_endevent(eventType)
+        return None
+
+    def get_endevent(self):
+        """
+        Get endevent type for music channel.
+        """
+        return self._channel.get_endevent()
 
