@@ -17,6 +17,7 @@
 -add vector object.
 -revise mixer processing.
 -add mixer music object.
+-add mixer channel endevent.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
